Completely remade portfolio to single page view. Added pictures for portfolio cards. Will have to revisit to edit content and re-uploaded images once I work on the UIs.

--- a/psychic.html
+++ b/psychic.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Pyschic Games</title>
+  <title>Psychic Games</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
 
-<h1 class="jumbotron">Welcome to the Pyschic Game!!!</h1>
+<h1 class="jumbotron">Welcome to the Psychic Game!!!</h1>
 
 <h2>Try guessing what letter I am thinking. You have nine guesses per round.</h2>
 
@@ -19,7 +19,7 @@
 <p>Guesses:<span id="guesses"></span></p>
 <p>Guesses Left:<span id="guesses-left"> 9</span></p>
 
-<script src="assets/game.js"></script>
+<script src="assets/javascript/psychic-game.js"></script>
 
 </body>
 
