--- a/triviagame.html
+++ b/triviagame.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Simple Trivia Game</title>
-<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+<link rel="stylesheet" type="text/css" href="assets/css/trivia-style.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/javascript/triviagame.js"></script>
 </head>
