--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div class="card thumbnail">
                 <a href="collectorHome.html">
-                  <img src="assets/images/record-collector.png" alt="Record Collector" style="width:100%">
+                  <img src="assets/images/record-collector.PNG" alt="Record Collector" style="width:100%">
                 </a>
                 <div class= "title">
                     <h4><a href="collectorHome.html">Record Collector</a></h4>
@@ -82,7 +82,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div class="card thumbnail">
                 <a href="traintimes.html">
-                  <img src="assets/images/train-times.png" alt="Train Times" style="width:100%">
+                  <img src="assets/images/train-times.PNG" alt="Train Times" style="width:100%">
                 </a>
                 <div class= "title">
                     <h4><a href="traintimes.html">Train Times</a></h4>
@@ -97,7 +97,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div class="card thumbnail">
                 <a href="triviagame.html">
-                  <img src="assets/images/trivia-game.png" alt="Trivia Game" style="width:100%">
+                  <img src="assets/images/trivia-game.PNG" alt="Trivia Game" style="width:100%">
                 </a>
                 <div class= "title">
                     <h4><a href="triviagame.html">Rick & Morty Trivia</a></h4>
@@ -112,7 +112,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div class="card thumbnail">
                 <a href="psychic.html">
-                  <img src="assets/images/psychic.png" alt="Psychic" style="width:100%">
+                  <img src="assets/images/psychic.PNG" alt="Psychic" style="width:100%">
                 </a>
                 <div class= "title">
                     <h4><a href="psychic.html">Psychic</a></h4>
@@ -127,7 +127,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div class="card thumbnail">
                 <a href="crystals.html">
-                  <img src="assets/images/crystal-game.png" alt="Crystal Game" style="width:100%">
+                  <img src="assets/images/crystal-game.PNG" alt="Crystal Game" style="width:100%">
                 </a>
                 <div class= "title">
                     <h4><a href="crystals.html">Crystals Game</a></h4>
@@ -142,7 +142,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div class="card thumbnail">
                 <a href="giphyfetch.html">
-                  <img src="assets/images/giphy-fetch.png" alt="Giphy Fetch" style="width:100%">
+                  <img src="assets/images/giphy-fetch.PNG" alt="Giphy Fetch" style="width:100%">
                 </a>
                 <div class= "title">
                     <h4><a href="giphyfetch.html">Giphy Fetch</a></h4>
