Add a line in the cards to differentiate pic and banner

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
                 <a href="collectorHome.html">
                   <img src="assets/images/record-collector.PNG" alt="Record Collector" style="width:100%">
                 </a>
-                <div class= "title">
+                <div class= "title banner">
                     <h4><a href="collectorHome.html">Record Collector</a></h4>
                   </div>
                   <div class= "github">
                     <a href="https://github.com/EmilPatino/Team-Project-1">GitHub Repo</a>
-                  </div>
                   <br>
+                </div>
             </div>
         </div>
         
@@ -84,7 +84,7 @@
                 <a href="traintimes.html">
                   <img src="assets/images/train-times.PNG" alt="Train Times" style="width:100%">
                 </a>
-                <div class= "title">
+                <div class= "title banner">
                     <h4><a href="traintimes.html">Train Times</a></h4>
                   </div>
                   <div class= "github">
@@ -99,7 +99,7 @@
                 <a href="triviagame.html">
                   <img src="assets/images/trivia-game.PNG" alt="Trivia Game" style="width:100%">
                 </a>
-                <div class= "title">
+                <div class= "title banner">
                     <h4><a href="triviagame.html">Rick & Morty Trivia</a></h4>
                   </div>
                   <div class= "github">
@@ -114,7 +114,7 @@
                 <a href="psychic.html">
                   <img src="assets/images/psychic.PNG" alt="Psychic" style="width:100%">
                 </a>
-                <div class= "title">
+                <div class= "title banner">
                     <h4><a href="psychic.html">Psychic</a></h4>
                   </div>
                   <div class= "github">
@@ -129,7 +129,7 @@
                 <a href="crystals.html">
                   <img src="assets/images/crystal-game.PNG" alt="Crystal Game" style="width:100%">
                 </a>
-                <div class= "title">
+                <div class= "title banner">
                     <h4><a href="crystals.html">Crystals Game</a></h4>
                   </div>
                   <div class= "github">
@@ -144,7 +144,7 @@
                 <a href="giphyfetch.html">
                   <img src="assets/images/giphy-fetch.PNG" alt="Giphy Fetch" style="width:100%">
                 </a>
-                <div class= "title">
+                <div class= "title banner">
                     <h4><a href="giphyfetch.html">Giphy Fetch</a></h4>
                   </div>
                   <div class= "github">
