Adding UI for Psychic game. Will need to find alternatives to alerts.

--- a/triviagame.html
+++ b/triviagame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Simple Trivia Game</title>
+<title>RIck & Morty Trivia</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="assets/css/trivia-style.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
