--- a/crystals.html
+++ b/crystals.html
@@ -42,11 +42,7 @@
 <div class = "container">
 <div class="jumbotron text-center" id = "jumbo">
     <h2 id = "jumbotext1">Crystal Collector!</h2> 
-    <p id = "jumbotext2"> You will be given a random number at the start of the game.</p>
-    <p id = "jumbotext2">There are four crystals below. You will add a specific amount of points to your total score by clicking on a crystal.</p>   
-    <p id = "jumbotext2">You win the game by matching your score to random number, you lose the game if your total score goes above the random number.</p>
-    <p id = "jumbotext2">The value of each crystal is hidden from you until you click on it.</p>
-    <p id = "jumbotext2">The game will change the values of each crystal each time when the game starts.</p>
+    <p id = "jumbotext2"> The four crystals below have hidden, randomized values. Your goal is to accumulate points to match the target score. Keep in mind that you will lose if your total score surpasses the target. All values will randomize after winning or losing. </p>
 </div>
 </div>
 
