--- a/crystals.html
+++ b/crystals.html
@@ -42,7 +42,7 @@
 <div class = "container">
 <div class="jumbotron text-center" id = "jumbo">
     <h2 id = "jumbotext1">Crystal Collector!</h2> 
-    <p id = "jumbotext2"> The four crystals below have hidden, randomized values. Your goal is to accumulate points to match the target score. Keep in mind that you will lose if your total score surpasses the target.</p>
+    <p id = "jumbotext2"> The four crystals below have hidden, randomized values. Your goal is to accumulate points to match the target score. Keep in mind that you will lose if your total score surpasses the target. Crystals will randomize after each round.</p>
 </div>
 </div>
 
