Finalized Crystals Game UI

--- a/crystals.html
+++ b/crystals.html
@@ -52,10 +52,10 @@
     <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
       <div class="card thumbnail" id = "results">
   
-        <p>Wins:<span id="wins"></span></p>
-        <p>Losses:<span id="losses"></span></p>
-        <p>Target Score:<span class="target"></p>
-        <p>Total Score:<span class="score"></p>
+        <p id = "jumbotext2">Wins:<span id="wins"></span></p>
+        <p id = "jumbotext2">Losses:<span id="losses"></span></p>
+        <p id = "jumbotext2"> Target Score: <span class="target"></p>
+        <p id = "jumbotext2">Total Score: <span class="score"></p>
         
       </div>
     </div>
