--- a/psychic.html
+++ b/psychic.html
@@ -76,6 +76,18 @@
     </div>
 </div>
 
+<div class = "container" id= "mobile-content">
+  <div class="row" id = "mobile-content">
+    <div class="col-xs-3 col-sm-3 col-md-3" id= "mobile-content">
+    <div class="col-xs-6 col-sm-6 col-md-6" id= "mobile-content">
+      <form id="myForm">
+      <input type="text" onkeyup="myFunction()">
+      </form>
+    </div>
+    <div class="col-xs-3 col-sm-3 col-md-3" id= "mobile-content"></div>
+  </div>
+</div>
+
 
 
 <script src="assets/javascript/psychic-game.js"></script>
