Adding new image for Giphy Fetch card

--- a/giphyfetch.html
+++ b/giphyfetch.html
@@ -58,7 +58,7 @@
           <input class="form-control input" id="gif-input" type="text">
         </div>
         <div>
-          <button class="btn btn-primary float-right" id="add-gif">Add a Category</button>
+          <button class="btn btn-primary float-right" id="add-gif">Add Search</button>
         </div>
       </form>
     </div>
