--- a/collections.html
+++ b/collections.html
@@ -2,60 +2,63 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery.js"></script>
-
-    <link rel="html" href="index.html">
-    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
-    <title>My Collection</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Baumans&display=swap" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+        <title>My Collection</title>
+        <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+        <link rel="stylesheet" type="text/css" href="assets/css/collectorStyle.css">
 </head>
 
+
 <body background="assets/images/floor-tile.png">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: maroon">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarTogglerDemo02">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#!">My Collection</a>
-
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="collectorHome.html">Search <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="collections.html">Collection</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
-    <br>
-
-    <div class="row">
-
-        <div class="col-md-8" style="margin-left: 12%">
-            <table class="table" id="collection-table">
-                <thead style="background:maroon; color: white; font-weight: bold;">
-                    <tr>
-                        <th>Album:</th>
-                        <th>Artist:</th>
-                    </tr>
-                </thead>
-                <tbody style="background: white; font-weight: bold;">
-                    <tr>
-                        <th scope="col"></th>
-                        <th scope="col"></th>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="index.html">Emil Patino</a>
     </div>
+          
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Portfolio</a></li>
+        <li><a href="collectorHome.html">Search Albums</a></li>
+        </ul>
+    </div>
+        
+  </div> 
+</nav>
+<br>
+<br>
+<br>
+<br>
+
+<div class = "container">
+        <div class="jumbotron text-center" id = "jumbo">
+            <h2 id = "jumbotext2">Collection</h2> 
+            <div class="row">
+          <div class="table-responsive">
+            <table class="table" id='collection-table'>
+              <thead>
+                <tr>
+                    <th class="center">Album</th>
+                    <th class="center">Artist</th>
+                </tr>
+              </thead>
+              <tbody class = "hover">
+              </tbody>
+            </table>
+          </div>
+            </div>
+        </div>
+      </div>
 
     <script src="assets/javascript/collector.js"></script>
     </script>
