--- a/collectorHome.html
+++ b/collectorHome.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" type="text/css" href="assets/css/collectorStyle.css">
 </head>
 
+<body>
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
@@ -27,12 +28,13 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html">Portfolio</a></li>
-        <li><a href="collections.html">Collection</a></li>
+        <li><a href="collections.html">Record Collection</a></li>
         </ul>
     </div>
         
   </div> 
 </nav>
+<br>
 <br>
 <br>
 <br>
