--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <p><img id="mypic" class= "img-rounded" src="assets/images/download.png" alt="Emil Patino" width="573" height="900"></p>
                 <div id= "textbox">
                     <p id="motto">Dedicated to Innovation & the Democratization of Technology</p>
-                    <p id="biotext">I am a dedicated product management professional who believes in hardwork, integrity, humility, and the ever-giving value of continous learning. I aim to dedicate my life to leading innovative, technological solutions that further the human condition. I thrive in entrepreneurial environments that allow me to infuse my creativity, love of learning, and compassion for others into my work.</p>
-                    <p id="biotext">My love of learning has led me to expand my aptitude for both technical and business subject matter empowering me to become a versatile leader on multidisciplinary teams. My career as a consultant has allowed me to deliver value across a wide portfolio of technical projects. I have been fortunate to work for the Department of Justice's 9/11 Victim Compensation Fund, the Transportation Security Administration, the Department of Homeland Security's Office of the Chief Technology Officer, and Capital One's Delivery Experience division.</p>
-                    <p id="biotext">I graduated Magna Cum Laude from Georgetown University as a dual major of Art History and Russian Studies. My certifications include: Project Management Professional (PMP), AWS Solution Architect Associate, AWS General Cloud Practitioner, Certified Scrum Master (CSM), and Certified Associate of Project Management (CAPM).</p>
+                    <p id="biotext">I am a product management professional who believes in hard work, integrity, humility, and the never-ending value of learning. I thrive in entrepreneurial environments that allow me to infuse my creativity, love of learning, and compassion for others into my work. I aim to dedicate my professional career to building close-knit teams that trust and help each other succeed. </p>
+                    <p id="biotext">My aptitude for both technical and business subject matter empowers me as a versatile leader on multidisciplinary teams. I enjoy acting as a liaison between senior leadership and technical teams. My consulting experience has allowed me to adopt a variety of roles that delivered value across a wide portfolio of projects.</p>
+                    <p id="biotext">I graduated Magna Cum Laude from Georgetown University as a dual major of Russian Studies and Art History. Certifications include: Project Management Professional (PMP), Certified Scrum Product Owner (CSPO), Full Stack Developer, AWS Solution Architect Associate, and Certified Scrum Master (CSM).</p>
                 </div>
         </div>
     </div>
@@ -215,7 +215,7 @@
 <div class="footer">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                Copyright ©
+                Emil Patino
             </div>
         </div>
     </div>
