--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </div>
 
 <!-- Contact Container -->
-<div class="container content">
+<div class="container content" id= "section4">
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <h2 class="boxheader">Contact</h2>
