Added Email Icon

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             <a href="https://github.com/EmilPatino">
               <img src="assets/images/GitHub.png" alt="GitHub" id="github">
             </a>
+            <a href="mailto:emilspatino@gmail.com">
+              <img src="assets/images/email.png" alt="Email" id="email">
+            </a>
+            
           <h2 class="boxheader start">About Me</h2>
         </div>
     </div>
