Updated language to final version ready for public release.

--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
             <p><img id="mypic" class= "img-rounded" src="assets/images/download.png" alt="Emil Patino" width="573" height="900"></p>
                 <div id= "textbox">
                     <p id="motto">Dedicated to Innovation & the Democratization of Technology</p>
-                    <p id="biotext">I am a product management professional who believes in hard work, integrity, and the value of continuous learning. I thrive in collaborative environments that empower me to infuse my creativity, entrepreneurial spirit, and intellectual curiosity into my work. I am a fierce defender of my teams as I staunchly believe in the importance of close-knit teams that help each other succeed. </p>
-                    <p id="biotext">My aptitude for both technical and business subject matter empowers me to become a valuable leader on multidisciplinary teams. I excel at translating organizational goals and objectives into executable action items organized within tailored management frameworks. My consulting experience has allowed me to continuously expand my skill set and adopt new roles to solve complex challenges across a wide portfolio of organizations.</p>
-                    <p id="biotext">I graduated Magna Cum Laude from Georgetown University as a dual major of Russian Studies and Art History. My certifications include Project Management Professional (PMP), Certified Scrum Product Owner (CSPO), Certified Scrum Master (CSM), AWS Solution Architect Associate, and Full Stack Developer (October 2019).</p>
-                </div>
+                    <p id="biotext">Successful innovators require a solid technical foundation on which to execute their radical ideas. This is why I learn to code.</p>
+                    <p id="biotext">I am a product management professional who believes in hard work, integrity, and the value of continuous learning. I thrive in collaborative environments that welcome creativity, entrepreneurial spirit, and intellectual curiosity. I enjoy developing close-knit teams that challenge and help each other succeed.</p>
+                    <p id="biotext">I graduated Magna Cum Laude from Georgetown University as a dual major in Russian Studies and Art History. My certifications include Project Management Professional (PMP), Certified Scrum Product Owner (CSPO), Certified Scrum Master (CSM), AWS Solution Architect Associate, and Full Stack Developer (October 2019).</p>
+                    <p id="biotext">I built and deployed this website as an experiment in what product owners may achieve when they solidify their technical foundation. I invite you to join me in exploring the nexus between the technical and functional.</p>
+                  </div>
         </div>
     </div>
 </div>
