--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <p id="motto">Dedicated to Innovation & the Democratization of Technology</p>
                     <p id="biotext">Successful innovators require a solid technical foundation on which to execute their radical ideas. This is why I learn to code.</p>
                     <p id="biotext">I am a product management professional who believes in hard work, integrity, and the value of continuous learning. I thrive in collaborative environments that welcome creativity, entrepreneurial spirit, and intellectual curiosity. I enjoy developing close-knit teams that challenge and help each other succeed.</p>
-                    <p id="biotext">I graduated Magna Cum Laude from Georgetown University as a dual major in Russian Studies and Art History. My certifications include Project Management Professional (PMP), Certified Scrum Product Owner (CSPO), Certified Scrum Master (CSM), AWS Solution Architect Associate, and Full Stack Developer (October 2019).</p>
+                    <p id="biotext">I graduated Magna Cum Laude from Georgetown University as a dual major in Russian Studies and Art History. My certifications include Project Management Professional (PMP), Certified Scrum Product Owner (CSPO), Certified Scrum Master (CSM), AWS Solution Architect Associate, and Full Stack Developer.</p>
                     <p id="biotext">I built and deployed this website as an experiment in what product owners may achieve when they solidify their technical foundation. I invite you to join me in exploring the nexus between the technical and functional.</p>
                   </div>
         </div>
