Added First Blog

--- a/index.html
+++ b/index.html
@@ -154,15 +154,14 @@
 
   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
       <div class="card">
-          <a href="">
-            <img src="assets/images/comingsoon.png" alt="coming soon" style="width:100%">
+          <a href="WhyILearntoCode.html">
+            <img src="assets/images/coding.jpg" alt="blog1" style="width:100%">
           </a>
           <div class= "title">
-              <h4><a href="">Coming Soon</a></h4>
+              <h4><a href="WhyILearntoCode.html">Why I learned to code: Four Reasons Why Product Managers Should Know the Basics</a></h4>
             </div>
       </div>
   </div>
-
 
 </div>
 
