--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <img src="assets/images/coding.jpg" alt="blog1" style="width:100%">
           </a>
           <div class= "title">
-              <h4><a href="WhyILearntoCode.html">Why I learned to code: Four Reasons Why Product Managers Should Know the Basics</a></h4>
+              <h4><a href="WhyILearntoCode.html">Four Reasons Why Product Managers Should Know the Basics</a></h4>
             </div>
       </div>
   </div>
