Added new article card to homepage as well as new page.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,18 @@
       </div>
   </div>
 
+  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+    <div class="card">
+        <a href="SixTipsForBetterManagingTechTeams.html">
+          <img src="assets/images/oskar-yildiz-gy08FXeM2L4-unsplash1.jpg" alt="attribution: oskar-yildiz-gy08FXeM2L4-unsplash" style="width:100%">
+        </a>
+        <div class= "title">
+            <h4><a href="SixTipsForBetterManagingTechTeams.html">Six Tips for Better Managing Tech Teams</a></h4>
+          </div>
+    </div>
+</div>
+
+
 </div>
 
 <!-- Skills Container -->
