Finally made the Pschic game mobile friendly by creating adding an array of buttons.

--- a/psychic.html
+++ b/psychic.html
@@ -76,10 +76,7 @@
     </div>
 </div>
 
-<div class = "container">
-      <p id="mobile-content">This Game is Not Mobile Friendly</p>
-</div>
-
+<div id="buttons"></div>
 
 
 <script src="assets/javascript/psychic-game.js"></script>
