--- a/index.html
+++ b/index.html
@@ -174,6 +174,28 @@
     </div>
 </div>
 
+<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+  <div class="card">
+      <a href="6Tools.HTML">
+        <img src="assets/images/Git.png" alt="blog1" style="width:100%">
+      </a>
+      <div class= "title">
+          <h4><a href="6Tools.html">Compliance Starts at the Source - 6 Tools for Practical Controls</a></h4>
+        </div>
+  </div>
+</div>
+
+<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+  <div class="card">
+      <a href="TechCompliance.html">
+        <img src="assets/images/techcompliance.jpg" alt="blog1" style="width:100%">
+      </a>
+      <div class= "title">
+          <h4><a href="TechCompliance.html">Putting the “Tech” in Technical Compliance</a></h4>
+        </div>
+  </div>
+</div>
+
 
 </div>
 
