Broken link fix

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <img src="assets/images/Git.png" alt="blog1" style="width:100%">
       </a>
       <div class= "title">
-          <h4><a href="6Tools.html">Compliance Starts at the Source - 6 Tools for Practical Controls</a></h4>
+          <h4><a href="6Tools.HTML">Compliance Starts at the Source - 6 Tools for Practical Controls</a></h4>
         </div>
   </div>
 </div>
